# AudioCaptioning

./: README.md  clotho_license.txt  eval_test.ipynb  main.ipynb  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: main-checkpoint.ipynb
configs/: config_format.md  pann.yaml  pann_finetuned.yaml  resnet.yaml  resnet_baseline.yaml  resnet_eval.yaml  resnet_finetuned.yaml  vit.yaml  vit33.yaml  vit_baseline.yaml  vit_eval.yaml
configs/.ipynb_checkpoints/: config_format-checkpoint.md  pann-checkpoint.yaml  resnet-checkpoint.yaml  vit-checkpoint.yaml
dataloaders/: clotho_dataloader.py  clotho_dataloader_emb.py
dataloaders/.ipynb_checkpoints/: clotho_dataloader-checkpoint.py
models/: audio_encoders.py  clip.py  pann.py  text_encoder.py  trainable_params.py
models/.ipynb_checkpoints/: audio_encoders-checkpoint.py  clip-checkpoint.py  text_encoder-checkpoint.py
util/: download_weights.sh  info_nce_loss.py  loss.py  metrics.py  utils.py
