[tool.poetry]
name = "audiocaptioning"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.13.0"
pyyaml = "^6.0"
torchvision = "^0.14.0"
torchaudio = "^0.13.0"
transformers = "^4.25.1"
librosa = "^0.9.2"
torchlibrosa = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
