[tool.poetry]
name = "audiocaptioning"
version = "0.1.0"
description = ""
authors = ["Christian Clark <christianclark687@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
torch = "<=1.12.1"
torchvision = "*"
torchaudio = "*"
transformers = "^4.25.1"
niacin = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
